--- a/src/main/webapp/dxt1.0/student-projects.html
+++ b/src/main/webapp/dxt1.0/student-projects.html
@@ -64,7 +64,7 @@
         </div>
     </div>
 
-
+    <input type="button" value="新建项目"  class="btn btn-default " onclick="javascript:window.location.href='student-new-project.html'">
             <h3>兴趣项目</h3>
             <section id="domBox" class="list-group">
             </section>
