--- a/src/main/webapp/dxt1.0/teacher-team-info.html
+++ b/src/main/webapp/dxt1.0/teacher-team-info.html
@@ -124,6 +124,14 @@
                             <div id="ruleDiv">
                                 <div class="row" >
                                     <div class="col-md-2  col-md-offset-0.5">
+                                        <p class="text-muted">选择项目</p>
+                                    </div>
+                                    <div class="col-md-2 ">
+                                        <input type="radio" >项目一
+                                    </div>
+                                </div>
+                                <div class="row" >
+                                    <div class="col-md-2  col-md-offset-0.5">
                                         <p class="text-muted">评价规则1</p>
                                     </div>
                                     <div class="col-md-2 ">
