--- a/src/main/webapp/dxt1.0/student-projects.html
+++ b/src/main/webapp/dxt1.0/student-projects.html
@@ -60,6 +60,11 @@
                 </div>
                 <div id='teamVOIdSet' class="panel-body">
                 </div>
+                <div id="task" class="panel-body">
+                    任务1:。。。。。。。。<br>
+                    任务2:。。。。。。。。<br>
+                    任务3:。。。。。。。。<br>
+                </div>
             </div>
         </div>
     </div>
