--- a/src/main/webapp/dxt1.0/teacher-project-info.html
+++ b/src/main/webapp/dxt1.0/teacher-project-info.html
@@ -146,7 +146,39 @@
                 </div>
             </div>
         </div>
-    </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 ">
+                    <p class="text-muted">创建日期</p >
+                    <input type="text" class="form-control" name="targetDate" id="datetimepicker">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 ">
+                    <p class="text-muted">开始日期</p >
+                    <input type="text" class="form-control" name="targetDate" id="datetimepicker">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 ">
+                    <p class="text-muted">项目ID</p >
+                    <input type="text" class="form-control" name="targetDate" id="datetimepicker">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 ">
+                    <p class="text-muted">截止日期</p >
+                    <input type="text" class="form-control" name="targetDate" id="datetimepicker">
+                </div>
+            </div>
+        </div>
+                </div>
                 <div class="modal-footer">
                     <p align="center">
                         <button id="releaseButton" type="button" class="btn btn-default" data-dismiss="modal">确定</button>
