差接受申请

--- a/src/main/webapp/dxt1.0/student-projects.html
+++ b/src/main/webapp/dxt1.0/student-projects.html
@@ -42,7 +42,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a href="#collapseOne" data-toggle="collapse" data-parent="#accordion">Ecollaboration</a>
+                    <a id="itemName" href="#collapseOne" data-toggle="collapse" data-parent="#accordion">Ecollaboration</a>
                 </h4>
             </div>
             <div id="collapseOne" class="panel-collapse collapse ">
