--- a/src/main/webapp/dxt1.0/teacher-project-info.html
+++ b/src/main/webapp/dxt1.0/teacher-project-info.html
@@ -95,9 +95,6 @@
                 </div>
                 <div id="collapseOne" class="panel-collapse collapse ">
                     <div id="teamDom" class="panel-body">
-                        <a href="#">团队一</a><br>
-                        <a href="#">团队二</a><br>
-                        <a href="#">团队三</a><br>
                         ....
                     </div>
                 </div>
@@ -108,6 +105,9 @@
                 <a data-toggle="modal" data-target="#myModal" >
                     <button type="submit" class="btn btn-default" value="发布任务">发布任务</button>
                 </a>
+                &nbsp;&nbsp;&nbsp;
+                <input type="button" value="查看申请" class="btn btn-default"
+                       onclick="javascript:window.location.href='teacher-checkapply.html'">
 <form id="releaseForm">
     <div class="modal fade" id="myModal" role="dialog">
         <div class="modal-dialog">
