--- a/src/main/webapp/dxt1.0/teacher-projects.html
+++ b/src/main/webapp/dxt1.0/teacher-projects.html
@@ -38,8 +38,9 @@
 <div class="container">
     <div class="row">
         <div class="col-md-5 col-md-offset-7">
-            <div class="col-md-6 ">
-                <input type="text" class="form-control" name="search" placeholder="输入要搜索的项目">
+            <div class="col-md-3 ">
+                <input type="button" value="查看申请" class="btn btn-default"
+                       onclick="javascript:window.location.href='teacher-checkapply.html'">
             </div>
             <div class="col-md-2.5 col-md-offset-0.5">
                 <input type="button" value="搜索"  class="btn btn-default " onclick="javascript:window.location.href='teacher-project-info.html'">
