学生申请团队成功

--- a/src/main/webapp/dxt1.0/student-team-info.html
+++ b/src/main/webapp/dxt1.0/student-team-info.html
@@ -99,7 +99,10 @@
         </div>
     </div>
 </div>
-
+    <button  id="applyTeamButton" type="submit" value="申请团队" class="btn btn-default">申请团队</button>
+    &nbsp;&nbsp;&nbsp;
+    <input type="button" value="查看申请" class="btn btn-default"
+           onclick="javascript:window.location.href='student-checkapply.html'">
 </div>
 
 <footer id="footer">
