学生申请团队成功

--- a/src/main/webapp/dxt1.0/teacher-checkapply.html
+++ b/src/main/webapp/dxt1.0/teacher-checkapply.html
@@ -36,7 +36,7 @@
 <br><br><br><br>
 
 <h3 align="center">学生申请信息</h3>
-<ul class="list-group">
+<ul  id="applyList" class="list-group">
     <li class="list-group-item">1.学生A申请项目A <button style=" float:right" type="button">拒绝</button><button style=" float:right" type="button">同意</button></li>
     <li class="list-group-item">2.学生B申请项目B <button style=" float:right" type="button">拒绝</button><button style=" float:right" type="button">同意</button></li>
     <li class="list-group-item">3.学生C申请项目C <button style=" float:right" type="button">拒绝</button><button style=" float:right" type="button">同意</button></li>
