--- a/src/main/webapp/dxt1.0/student-teams.html
+++ b/src/main/webapp/dxt1.0/student-teams.html
@@ -25,7 +25,9 @@
                 <li class="active"><a href="student-teams.html"><span class="glyphicon glyphicon-list"></span> 我的团队</a></li>
                 <li><a href="student-selfcenter-main.html"><span class="glyphicon glyphicon-user"></span> 个人中心</a></li>
                 <li><a href="project-platform-student.html"><span class="glyphicon glyphicon-question-sign"></span> 项目平台</a></li>
-                <li><a href="search-student.html"><span class="glyphicon glyphicon-question-sign"></span> 搜索项目</a></li>
+                <li><a href="student-search.html"><span class="glyphicon glyphicon-question-sign"></span> 搜索项目</a></li>
+                <li><input type="button" value="注销" class="btn btn-default" style="width: 48px; height: 30px; margin: 10px"
+                           onclick="javascript:window.location.href='login.html'"></li>
             </ul>
         </div>
     </div>
