--- a/src/main/webapp/dxt1.0/student-checkapply.html
+++ b/src/main/webapp/dxt1.0/student-checkapply.html
@@ -27,7 +27,9 @@
                 <li class="active"><a href="student-teams.html"><span class="glyphicon glyphicon-list"></span> 我的团队</a></li>
                 <li><a href="student-selfcenter-main.html"><span class="glyphicon glyphicon-user"></span> 个人中心</a></li>
                 <li ><a href="project-platform-student.html"><span class="glyphicon glyphicon-question-sign"></span> 项目平台</a></li>
-                <li><a href="search-student.html"><span class="glyphicon glyphicon-question-sign"></span> 搜索项目</a></li>
+                <li><a href="student-search.html"><span class="glyphicon glyphicon-question-sign"></span> 搜索项目</a></li>
+                <li><input type="button" value="注销" class="btn btn-default" style="width: 48px; height: 30px; margin: 10px"
+                           onclick="javascript:window.location.href='login.html'"></li>
             </ul>
         </div>
     </div>
@@ -36,9 +38,6 @@
 
 <h3 align="center">申请信息</h3>
 <ul id="applyList" class="list-group">
-    <li class="list-group-item">1.学生A申请团队A <button style=" float:right" type="button">拒绝</button><button style=" float:right" type="button">同意</button></li>
-    <li class="list-group-item">2.学生B申请团队B <button style=" float:right" type="button">拒绝</button><button style=" float:right" type="button">同意</button></li>
-    <li class="list-group-item">3.学生C申请团队C <button style=" float:right" type="button">拒绝</button><button style=" float:right" type="button">同意</button></li>
 </ul>
 
 
