--- a/src/main/webapp/dxt1.0/student-projects.html
+++ b/src/main/webapp/dxt1.0/student-projects.html
@@ -28,6 +28,8 @@
                 <li><a href="student-selfcenter-main.html"><span class="glyphicon glyphicon-user"></span> 个人中心</a></li>
                 <li><a href="project-platform-student.html"><span class="glyphicon glyphicon-question-sign"></span> 项目平台</a></li>
                 <li><a href="student-search.html"><span class="glyphicon glyphicon-question-sign"></span> 搜索项目</a></li>
+                <li><input type="button" value="注销" class="btn btn-default" style="width: 48px; height: 30px; margin: 10px"
+                           onclick="javascript:window.location.href='login.html'"></li>
             </ul>
         </div>
     </div>
@@ -42,7 +44,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a id="itemName" href="#collapseOne" data-toggle="collapse" data-parent="#accordion">Ecollaboration</a>
+                    <a id="itemName" href="#collapseOne" data-toggle="collapse" data-parent="#accordion"></a>
                 </h4>
             </div>
             <div id="collapseOne" class="panel-collapse collapse ">
@@ -61,9 +63,6 @@
                 <div id='teamVOIdSet' class="panel-body">
                 </div>
                 <div id="task" class="panel-body">
-                    任务1:。。。。。。。。<br>
-                    任务2:。。。。。。。。<br>
-                    任务3:。。。。。。。。<br>
                 </div>
             </div>
         </div>
