--- a/src/main/webapp/dxt1.0/student-team-info.html
+++ b/src/main/webapp/dxt1.0/student-team-info.html
@@ -27,7 +27,9 @@
                 <li class="active"><a href="student-teams.html"><span class="glyphicon glyphicon-list"></span> 我的团队</a></li>
                 <li ><a href="student-selfcenter-main.html"><span class="glyphicon glyphicon-user"></span> 个人中心</a></li>
                 <li><a href="project-platform-student.html"><span class="glyphicon glyphicon-question-sign"></span> 项目平台</a></li>
-                <li><a href="search-student.html"><span class="glyphicon glyphicon-question-sign"></span> 搜索项目</a></li>
+                <li><a href="student-search.html"><span class="glyphicon glyphicon-question-sign"></span> 搜索项目</a></li>
+                <li><input type="button" value="注销" class="btn btn-default" style="width: 48px; height: 30px; margin: 10px"
+                           onclick="javascript:window.location.href='login.html'"></li>
             </ul>
         </div>
     </div>
@@ -46,7 +48,6 @@
         </div>
         <div id="collapseOne" class="panel-collapse collapse ">
             <div id="teamName" class="panel-body">
-                Ecollaboration
             </div>
         </div>
     </div>
@@ -70,7 +71,6 @@
         </div>
         <div id="collapseThree" class="panel-collapse collapse ">
             <div id="createDate" class="panel-body">
-                2016.07.07
             </div>
         </div>
     </div>
@@ -82,7 +82,6 @@
         </div>
         <div id="collapseFour" class="panel-collapse collapse ">
             <div id="description" class="panel-body">
-                这里是团队相关介绍这里是团队相关介绍这里是团队相关介绍这里是团队相关介绍这里是团队相关介绍这里是团队相关介绍这里是团队相关介绍这里是团队相关介绍
             </div>
         </div>
     </div>
