--- a/src/main/webapp/dxt1.0/teacher-checkapply.html
+++ b/src/main/webapp/dxt1.0/teacher-checkapply.html
@@ -23,12 +23,14 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav navbar-right" style="margin-top:0">
-                <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span> 已有项目</a></li>
+                <li class="active"><a href="teacher-projects.html"><span class="glyphicon glyphicon-home"></span> 已有项目</a></li>
                 <li><a href="teacher-teams.html"><span class="glyphicon glyphicon-list"></span>团队管理</a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-fire"></span>发布</a></li>
                 <li><a href="teacher-selfcenter-main.html"><span class="glyphicon glyphicon-user"></span> 个人中心</a></li>
                 <li><a href="project-platform-teacher.html"><span class="glyphicon glyphicon-question-sign"></span> 项目平台</a></li>
-                <li><a href="search-teacher.html"><span class="glyphicon glyphicon-question-sign"></span> 搜索项目</a></li>
+                <li><a href="teacher-search.html"><span class="glyphicon glyphicon-question-sign"></span> 搜索项目</a></li>
+                <li><input type="button" value="注销" class="btn btn-default" style="width: 48px; height: 30px; margin: 10px"
+                           onclick="javascript:window.location.href='login.html'"></li>
             </ul>
         </div>
     </div>
@@ -37,9 +39,7 @@
 
 <h3 align="center">学生申请信息</h3>
 <ul  id="applyList" class="list-group">
-    <li class="list-group-item">1.学生A申请项目A <button style=" float:right" type="button">拒绝</button><button style=" float:right" type="button">同意</button></li>
-    <li class="list-group-item">2.学生B申请项目B <button style=" float:right" type="button">拒绝</button><button style=" float:right" type="button">同意</button></li>
-    <li class="list-group-item">3.学生C申请项目C <button style=" float:right" type="button">拒绝</button><button style=" float:right" type="button">同意</button></li>
+
 </ul>
 
 
