--- a/src/main/webapp/dxt1.0/teacher-personScore.html
+++ b/src/main/webapp/dxt1.0/teacher-personScore.html
@@ -28,6 +28,8 @@
                 <li><a href="teacher-selfcenter-main.html"><span class="glyphicon glyphicon-user"></span> 个人中心</a></li>
                 <li><a href="project-platform-teacher.html"><span class="glyphicon glyphicon-question-sign"></span> 项目平台</a></li>
                 <li><a href="teacher-search.html"><span class="glyphicon glyphicon-question-sign"></span> 搜索项目</a></li>
+                <li><input type="button" value="注销" class="btn btn-default" style="width: 48px; height: 30px; margin: 10px"
+                           onclick="javascript:window.location.href='login.html'"></li>
             </ul>
         </div>
     </div>
@@ -36,21 +38,10 @@
 <table class="table table-hover" >
     <thead>
     <tr  class="active" id="headTr">
-        <th></th>
-        <th>评分项一</th>
-        <th>评分项二</th>
-        <th>评分项三</th>
-        <th>评分项四</th>
     </tr>
     </thead>
     <tbody id="bodycontent">
-    <tr class="trClass">
-        <td name="studentId-5">gengrui</td>
-        <td contenteditable="true" name="11">undefined</td>
-        <td ccontenteditable="true" name="22">undefined</td>
-        <td contenteditable="true" name="33">0</td>
-        <td ccontenteditable="true" name="44">0</td>
-    </tr>
+
     </tbody>
 </table>
 <div id="div1">
