--- a/src/main/webapp/dxt1.0/teacher-search.html
+++ b/src/main/webapp/dxt1.0/teacher-search.html
@@ -29,6 +29,8 @@
                 <li class="active"><a href="teacher-selfcenter-main.html"><span class="glyphicon glyphicon-user"></span> 个人中心</a></li>
                 <li><a href="project-platform-teacher.html"><span class="glyphicon glyphicon-question-sign"></span> 项目平台</a></li>
                 <li><a href="teacher-search.html"><span class="glyphicon glyphicon-pencil"></span> 搜索项目</a></li>
+                <li><input type="button" value="注销" class="btn btn-default" style="width: 48px; height: 30px; margin: 10px"
+                          onclick="javascript:window.location.href='login.html'"></li>
             </ul>
         </div>
 </nav>
