--- a/src/main/webapp/dxt1.0/teacher-team-info.html
+++ b/src/main/webapp/dxt1.0/teacher-team-info.html
@@ -23,12 +23,14 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav navbar-right" style="margin-top:0">
-                <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span> 已有项目</a></li>
-                <li><a href="teacher-teams.html"><span class="glyphicon glyphicon-list"></span> 团队管理</a></li>
+                <li ><a href="#"><span class="glyphicon glyphicon-home"></span> 已有项目</a></li>
+                <li class="active"><a href="teacher-teams.html"><span class="glyphicon glyphicon-list"></span> 团队管理</a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-fire"></span> 发布</a></li>
                 <li><a href="teacher-selfcenter-main.html"><span class="glyphicon glyphicon-user"></span> 个人中心</a></li>
                 <li><a href="project-platform-teacher.html"><span class="glyphicon glyphicon-question-sign"></span> 项目平台</a></li>
                 <li><a href="teacher-search.html"><span class="glyphicon glyphicon-question-sign"></span> 搜索项目</a></li>
+                <li><input type="button" value="注销" class="btn btn-default" style="width: 48px; height: 30px; margin: 10px"
+                           onclick="javascript:window.location.href='login.html'"></li>
             </ul>
         </div>
     </div>
@@ -122,22 +124,6 @@
                     <div class="container">
                         <form id="rulesForm">
                             <div id="ruleDiv">
-                                <div class="row" >
-                                    <div class="col-md-2  col-md-offset-0.5">
-                                        <p class="text-muted">选择项目</p>
-                                    </div>
-                                    <div class="col-md-2 ">
-                                        <input type="radio" >项目一
-                                    </div>
-                                </div>
-                                <div class="row" >
-                                    <div class="col-md-2  col-md-offset-0.5">
-                                        <p class="text-muted">评价规则1</p>
-                                    </div>
-                                    <div class="col-md-2 ">
-                                        <input type="text" class="form-control" name="typeNames" id="typeNames1">
-                                    </div>
-                                </div>
                             </div>
                         </form>
                         <div class="text-left" >
