--- a/src/main/webapp/dxt1.0/teacher-teams.html
+++ b/src/main/webapp/dxt1.0/teacher-teams.html
@@ -24,11 +24,13 @@
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav navbar-right" style="margin-top:0">
                 <li ><a href="teacher-projects.html"><span class="glyphicon glyphicon-home"></span> 已有项目</a></li>
-                <li ><a href="teacher-teams.html"><span class="glyphicon glyphicon-list"></span> 团队管理</a></li>
+                <li class="active"><a href="teacher-teams.html"><span class="glyphicon glyphicon-list"></span> 团队管理</a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-fire"></span> 发布</a></li>
                 <li><a href="teacher-selfcenter-main.html"><span class="glyphicon glyphicon-user"></span> 个人中心</a></li>
                 <li><a href="project-platform-teacher.html"><span class="glyphicon glyphicon-question-sign"></span> 项目平台</a></li>
                 <li><a href="search-teacher.html"><span class="glyphicon glyphicon-question-sign"></span> 搜索项目</a></li>
+                <li><input type="button" value="注销" class="btn btn-default" style="width: 48px; height: 30px; margin: 10px"
+                           onclick="javascript:window.location.href='login.html'"></li>
             </ul>
         </div>
     </div>
